# hltv-crawler

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  LEARNING_ROADMAP.md  README.md  crawl.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
parser/: __init__.py  parsers.py
scraper/: __init__.py  config.py  event_scraper.py  http_client.py  match_scraper.py  orchestrator.py  team_scraper.py
storage/: __init__.py  database.py  schema.py
tests/: test_parser.py  test_storage.py
